tests/parsing/smtlib/v2.6/errors/059_declare-datatype_bad_name_1.expected
File "tests/parsing/smtlib/v2.6/errors/059_declare-datatype_bad_name_1.smt2", line 2, character 18-19:
2 | (declare-datatype _)
                      ^
Error while parsing a datatype declaration, read the reserved word '_',
      but expected a symbol.
